2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  Add dummy rule to make first build run through. Fixes #156643

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Hide fixed navigationbar when printing. Fixes #449618

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.notmpl.make:
	  Add new makefile for tmpl-less build.

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* autogen.sh:
	  Accepts automake 1.10 too. Fixes #459225

2007-08-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Make the tmpl-less build work.

	* tests/gtk-doc.make:
	  Switch again to the tmpl-less build.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	patch by: Rouslan Solomakhin <rouslan@solomakhin.net>

	* configure.in:
	  Fix the build.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* tests/gtk-doc.make:
	  Revert fix for #433338 and reopen bug. Breaks if file is not there,
	  e.g. if --rebuild-types is used.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  Some cleanups.

	* tests/gtk-doc.make:
	  Try the tmpl free build here.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* examples/Makefile.am:
	  Add commented out TESTS.

	* gtk-doc.m4:
	  Check for location of gtkdoc-check.

	* Makefile.am:
	* gtkdoc-check:
	  Test doc status and print result in check like layout.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: Sven Herzberg <herzi@gnome-de.org>

	* gtk-doc.make:
	* tests/gtk-doc.make:
	  Rebuild documentation of $(DOC_MODULE).types changed. Fixes #433338

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* Makefile.am:
	* configure.in:
	* gtkdoc-rebase.in:
	  Allow rebasing cross-references in generated docs. Fixes #434134.

2007-08-02  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	  Add a hack to gtkdoc-mkhtml to run uninstalled too.
